fix btn heading-filter on mobile

--- a/assets/sass/components/_heading.sass
+++ b/assets/sass/components/_heading.sass
@@ -25,6 +25,8 @@
         flex-direction: row
         .surtitle
             flex-basis: 100%
+        .btn
+            margin-left: auto
 
     @include media-breakpoint-up(md)
         h1
@@ -33,10 +35,6 @@
             margin-top: 1rem
         .more
             @include more
-
-        &-filter
-            .btn
-                margin-left: auto
 
     @include media-breakpoint-up(xl)
         h1
